Reworked header functionality and transitions to fix a bug where the dropdowns would show if you hovered over them even tho they're invisible

--- a/sass/theme/wrbb-styles/header.scss
+++ b/sass/theme/wrbb-styles/header.scss
@@ -26,7 +26,6 @@
 }
 
 .dropdown-content {
-  opacity: 0;
   position: absolute;
   background-color: #d30f0f;
   min-width: 150%;
@@ -49,18 +48,6 @@
 
 .menu-item:last-child .dropdown-content {
   right: 0;
-}
-
-.nav-item:hover {
-  background-color: #d30f0f;
-}
-
-.nav-item:hover .dropdown-content {
-  opacity: 100%;
-}
-
-.nav-item:hover .dropdown-toggle::after {
-  color: white;
 }
 
 .dropdown-content a {
@@ -88,6 +75,11 @@
 // The arrow next to the dropdown titles
 .dropdown-toggle::after {
   color: #d30f0f;
+  transition: color 0.3s;
+}
+
+.dropdown:hover .dropdown-toggle::after {
+  color: white;
 }
 
 .navbar-dark {
@@ -122,16 +114,12 @@
   }
 
   .dropdown-content {
-    max-height: 0;
-    transition: max-height 0.3s, opacity 0.3s;
+    // The JQuery transition is fast on mobile, so this matches that
+    transition: opacity 0s;
     position: static;
     text-align: center;
     min-width: 100%;
     overflow: hidden;
-  }
-
-  .nav-item:hover .dropdown-content {
-    max-height: 1000px;
   }
 }
 
